--- a/src/app/heroes/heroes.component.html
+++ b/src/app/heroes/heroes.component.html
@@ -1,5 +1,18 @@
-<p>
-  {{hero.name}}
-  {{hero.id}}
 
+<div>
+  <label>name:
+    <input [(ngModel)]="hero.name" type="text" placeholder="name">
+  </label>
+</div>
+
+
+
+<p>
+  {{hero.id}} : {{hero.name}}
 </p>
+
+<div>
+  <label>name:
+    <input [(ngModel)]="hero.name" placeholder="name">
+  </label>
+</div>
