--- a/src/app/heroes/heroes.component.html
+++ b/src/app/heroes/heroes.component.html
@@ -2,11 +2,11 @@
 <h2>나의 영웅들</h2>
 
 
-<u class="heroes">
-  <li *ngFor="let hero of heroes" (click)="onSelect(hero)">
+<ul class="heroes">
+  <li *ngFor="let hero of heroes" (click)="onSelect(hero)" [class.selected]="hero === selectedHero">
     <span class="badge">{{hero.id}}</span> {{hero.name}}
   </li>
-</u>
+</ul>
 <div *ngIf="selectedHero">
   <h2>{{selectedHero.name | uppercase}}</h2>
   <div>
