--- a/src/app/heroes/heroes.component.html
+++ b/src/app/heroes/heroes.component.html
@@ -7,17 +7,8 @@
     <span class="badge">{{hero.id}}</span> {{hero.name}}
   </li>
 </ul>
-<div *ngIf="selectedHero">
-  <h2>{{selectedHero.name | uppercase}}</h2>
-  <div>
-    <span>id : {{selectedHero.id}}</span>
-  </div>
-  <div>
-    <label>name:
-      <input [(ngModel)]="selectedHero.name" type="text" placeholder="name">
-    </label>
-  </div>
-</div>
+
+<app-hero-detail [hero] = "selectedHero"></app-hero-detail>
 
 
 
